[gd_scene load_steps=9 format=3 uid="uid://ulf5fyssfq1j"]

[ext_resource type="Script" uid="uid://c87ntldb4yb2f" path="res://Reproductios/PhysicsTesting/PhysicsEngineTest.gd" id="1_la2lc"]
[ext_resource type="PackedScene" uid="uid://4sx2fdulmp2l" path="res://Reproductios/PhysicsTesting/PhysicsObject.tscn" id="2_jnxcg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jnxcg"]

[sub_resource type="PlaneMesh" id="PlaneMesh_la2lc"]
material = SubResource("StandardMaterial3D_jnxcg")
size = Vector2(26, 26)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_la2lc"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_jnxcg"]
ground_color = Color(0.8923147, 0.80669075, 0.7144623, 1)

[sub_resource type="Sky" id="Sky_t8nll"]
sky_material = SubResource("PhysicalSkyMaterial_jnxcg")

[sub_resource type="Environment" id="Environment_la2lc"]
background_mode = 1
background_color = Color(0.2520276, 0.25202766, 0.25202763, 1)
sky = SubResource("Sky_t8nll")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 2

[node name="PhysicsEngineTest" type="Node3D"]
script = ExtResource("1_la2lc")
object_scene = ExtResource("2_jnxcg")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
offset_right = 307.0
offset_bottom = 307.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2

[node name="CurrentFPSLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CurrentFrameTimeLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FinalFPSLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FinalFrameTimeLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START TEST"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_la2lc")

[node name="Floor" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Floor"]
shape = SubResource("WorldBoundaryShape3D_la2lc")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8681556, 0.4962923, 0, -0.4962923, 0.8681556, 0, 10.855175, 17.899946)
fov = 90.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_la2lc")
